FIx profiles footer alignment
PB-49 #time 30m #done

--- a/source/stylesheets/pages/_results.scss
+++ b/source/stylesheets/pages/_results.scss
@@ -407,6 +407,16 @@ $gauge-hand-height: 8px;
 	background-color: palette('blue');
 }
 
+.profile__links nav {
+	width: 100%;
+
+	table-layout: fixed;
+}
+
+.profile__links li {
+	padding: 0;
+}
+
 .profile__links a {
 	@include image-replacement;
 
